<resources>
    <string name="app_name">job</string>
    <string name="user_type_activity_title">O que você está procurando?</string>
    <string name="user_type_activity_choice_subtitle">Selecione se você está procurando por emprego ou se você é uma empresa procurando colaboradores</string>
    <string name="user_type_find_job_text">Encontre uma vaga</string>
    <string name="user_type_find_employee_text">Encontre um colaborador</string>
    <string name="user_type_choice_type_card_description_job_text">Encontre uma vaga de emprego rapidamente</string>
    <string name="user_type_choice_type_card_description_employee_text">Encontre um colaborador para sua empresa</string>
    <string name="user_type_confirm">Confirmar</string>
</resources>