<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserTypeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_above_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="225dp" />

    <TextView
        android:id="@+id/user_type_activity_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_type_activity_title"
        android:textColor="@color/black_main_191919"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_type_activity_choice_subtitle_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/user_type_activity_choice_subtitle"
        android:textColor="#707070"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_type_activity_title_text_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_type_card_container"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:clickable="true"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@drawable/user_type_card_selector"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_above_card"
        android:focusable="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_type_image_circle_job"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:src="@drawable/ic_baseline_circle_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_job"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_24dp"
            android:src="@drawable/ic_work_purple_outline"
            app:layout_constraintBottom_toBottomOf="@+id/user_type_image_circle_job"
            app:layout_constraintEnd_toEndOf="@+id/user_type_image_circle_job"
            app:layout_constraintStart_toStartOf="@+id/user_type_image_circle_job"
            app:layout_constraintTop_toTopOf="@+id/user_type_image_circle_job" />

        <TextView
            android:id="@+id/user_type_card_title_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/user_type_find_job_text"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textColor="@color/black_main_191919"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type_image_circle_job" />

        <TextView
            android:id="@+id/user_type_card_description_job"
            style="@style/SecondaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/user_type_choice_type_card_description_job_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_type_container_employee_card"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/user_type_card_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toTopOf="@+id/guideline_above_card">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_type_image_circle_employee"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:src="@drawable/ic_baseline_circle_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_employee"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_24dp"
            android:src="@drawable/ic_person_employee"
            app:layout_constraintBottom_toBottomOf="@+id/user_type_image_circle_employee"
            app:layout_constraintEnd_toEndOf="@+id/user_type_image_circle_employee"
            app:layout_constraintStart_toStartOf="@+id/user_type_image_circle_employee"
            app:layout_constraintTop_toTopOf="@+id/user_type_image_circle_employee" />

        <TextView
            android:id="@+id/user_type_card_title_employee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/user_type_find_employee_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type_image_circle_employee" />

        <TextView
            android:id="@+id/user_type_card_description_employee"
            style="@style/SecondaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/user_type_choice_type_card_description_employee_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonOverlayTheme"
         android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:text="@string/user_type_confirm"
        android:textAllCaps="false"
        android:backgroundTint="@color/gray_button_disabled"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>